# Orangutan

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Orangutan.pro  Orangutan.pro.user.18  Orangutan.pro.user.3.2-pre1  assetsfactory.cpp  assetsfactory.h  assetsstorage.cpp  assetsstorage.h  camera.cpp  camera.h  cameranode.cpp  cameranode.h  customsliderwidget.cpp  customsliderwidget.h  edgefilter.vert  horizontalgaussianblurfilter.frag  light.cpp  light.h  lightnode.cpp  lightnode.h  main.cpp  mainwindow.cpp  mainwindow.h  material.cpp  material.h  materialtool.cpp  materialtool.h  mesh.cpp  mesh.h  object.cpp  object.h  opengl.cpp  opengl.h  parseur.cpp  parseur.h  readme.md  (+21 more)
Conception/: Uml.zargo
Debug/: Makefile  Makefile.Debug  Makefile.Release
Debug/debug/: moc_customsliderwidget.cpp  moc_materialtool.cpp  moc_renderingwindow.cpp  moc_windowtitlebar.cpp
cmake/: FindEIGEN.cmake  FindGLFW.cmake  FindGLI.cmake  FindGLM.cmake  FindLIBPNG.cmake  FindNANOGUI.cmake  FindQT.cmake  FindSOIL.cmake  FindSTB.cmake  Findassimp.cmake  Findnfd.cmake
ext/glm/: DartConfiguration.tcl
ext/libpng/: Makefile  config.status  libpng16.la  libtool  png-fix-itxt  pngcp  pngfix  pngimage  pngstest  pngtest  pngunknown  pngvalid  timepng
include/app/: app.h  canvasable.h  maintoolable.h  objecttoolable.h  screenable.h
include/camera/: camera.h  cameracontroller.h  freecamera.h  trackballcamera.h
include/core/: debug.h  handle.h  rendererable.h  shader.h  shaderprogram.h  texture.h  vao.h
include/debug/: visualdebugger.h
include/draft/: assets.h  objects.h  scenes.h
include/manager/: canvasmanager.h  texturemanager.h
include/material/: material.h  materialfactory.h  shaderfactory.h  shaderstrategy.h  uniform.h
include/mesh/: mesh.h  meshfactory.h
include/model/: assets.h  assetsfactory.h  library.h  objectlibrary.h  objectsfactory.h  universe.h
include/object/: asset.h  camera.h  light.h  material.h  materialfactory.h  mesh.h  object.h  renderableobject.h  renderableobjectfactory.h  shadermaterial.h  uniform.h
include/physics/: transformable.h
include/presenter/: canvaspresenter.h  presenter.h  renderableobjectpresenter.h  screenpresenter.h  universepresenter.h
include/scene/: assetsfactory.h  assetsstorage.h  inventory.h  objectnode.h  objectnodefactory.h  renderer.h  scene.h  scenefactory.h
include/shader/: environmentstrategy.h  gouraudstrategy.h  shaderstrategy.h
include/texture/: basisutexturefactory.h  cuberendertarget.h  ibl.h  ktxtexturefactory.h  rendertarget.h  texturefactory.h
include/ui/: canvas.h  screen.h  texturewindow.h  window.h
include/util/: image.h  keyboard.h  parseur.h  util.h
include/view/: canvas.h  screen.h  view.h
output/: studio_irradiance_uastc.ktx2  studio_radiance_uastc.ktx2
resources/meshes/: axes.mtl  chess.mtl  minion.blend  minion.blend1  spheres.gltf
resources/shaders/: brdf.frag  brdf.vert  cube_texture_debug.frag  edgefilter.frag  edgefilter.vert  environmentmap.frag  environmentmap.vert  equirectangular_to_cubemap.frag  equirectangular_to_cubemap.vert  horizontalgaussianblurfilter.frag  irradiance.frag  irradiance.vert  lightmesh.frag  lightmesh.geo  lightmesh.vert  pbr.frag  pbr.vert  phong.frag  phong.vert  radiance.frag  radiance.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  texture_debug.frag  texture_debug.vert  toon.frag  toon.vert  verticalgaussianblurfilter.frag
shader/: edgefilterstrategy.cpp  edgefilterstrategy.h  environmentmap.frag  environmentmap.frag~  environmentmap.vert  environmentstrategy.cpp  environmentstrategy.h  gaussianblurfilterstrategy.cpp  gaussianblurfilterstrategy.h  gouraudstrategy.cpp  gouraudstrategy.h  lightmesh.frag  phong.frag  shader.cpp  shader.frag  shader.h  shader.vert  shaderprogram.cpp  shaderprogram.h  shaderstrategy.cpp  shaderstrategy.h  skyboxstrategy.cpp  skyboxstrategy.h  toon.frag  toon.frag~  toon.vert  toonstrategy.cpp  toonstrategy.h
src/app/: app.cc  app.cpp  canvasable.cpp  customsliderwidget.cpp  main.cc  main.cpp  maintoolable.cpp  mainwindow.cpp  mainwindow.h  materialtool.cpp  materialtool.h  objecttoolable.cpp  renderingwindow.cpp  renderingwindow.h  screenable.cpp  windowtitlebar.cpp  windowtitlebar.h  worldtool.cpp  worldtool.h
src/assets/: assets.cpp
src/camera/: camera.cc  camera.cpp  cameracontroller.cc  freecamera.cc  freecamera.cpp  trackballcamera.cc  trackballcamera.cpp
src/core/: debug.cc  debug.cpp  debug.h  handle.cc  opengl.cpp  opengl.h  qtrenderer.cpp  qtrenderer.h  rendererable.cpp  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  vao.cpp  vao.h
src/debug/: visualdebugger.cc
src/draft/: assets.cpp  edgefilterstrategy.cpp  environmentstrategy.cpp  gaussianblurfilterstrategy.cpp  toonstrategy.cpp
src/manager/: canvasmanager.cc  texturemanager.cc
src/material/: material.cc  materialfactory.cc  shaderfactory.cc  shaderstrategy.cc  uniform.cc
src/mesh/: mesh.cc  meshfactory.cc
src/model/: assetsfactory.cc  assetsfactory.cpp  library.cc  library.cpp  objectlibrary.cpp  objectsfactory.cc  objectsfactory.cpp  universe.cc  universe.cpp
src/object/: asset.cc  asset.cpp  camera.cpp  camera.h  light.cc  light.cpp  material.cpp  materialfactory.cc  materialfactory.cpp  mesh.cc  mesh.cpp  mesh.h  object.cc  object.cpp  object.h  renderableobject.cc  renderableobject.cpp  renderableobject.h  renderableobjectfactory.cc  shadermaterial.cpp  uniform.cc  uniform.cpp
src/physics/: transformable.cc  transformable.cpp  transformable.h
src/presenter/: canvaspresenter.cc  canvaspresenter.cpp  presenter.cc  presenter.cpp  renderableobjectpresenter.cc  renderableobjectpresenter.cpp  screenpresenter.cc  screenpresenter.cpp  universepresenter.cc  universepresenter.cpp
src/scene/: assetsfactory.cpp  assetsstorage.cpp  objectnode.cc  objectnode.cpp  objectnode.h  objectnodefactory.cc  renderer.cpp  scene.cc  scene.cpp  scene.h  scenefactory.cc
src/shader/: edgefilterstrategy.h  environmentstrategy.cpp  gaussianblurfilterstrategy.cpp  gaussianblurfilterstrategy.h  (+8 more)
(+582 files in other folders)
